# universal-bookmark-manager

./: README.md  bookmark.sh  formats.md
netscape-to-universal/: .gitignore  Cargo.toml  README.md
netscape-to-universal/src/: bookmark.rs  folder.rs  lib.rs  main.rs  node_ref_ext.rs  tree.rs  tree_node.rs
netscape-to-universal/tests/: integration.rs
