[package]
name = "netscape-to-universal"
description = "A Netscape bookmarks converter for the universal bookmark manager"
version = "1.2.0"
edition = "2021"
authors = ["devgioele"]
license-file = "../LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuchiki = "0.8.1"
derive_builder = "0.12.0"
